@@ -70,6 +70,14 @@ apm-server:
       # a matching index pattern needs to be specified here.
       #index_pattern: "apm-*"
 
+  # golang expvar support - https://golang.org/pkg/expvar/
+  #expvar:
+  # Set to true to Expose expvar
+  #enabled: false
+
+  # Url to expose expvar
+  #url: "/debug/vars"
+
 #================================ General ======================================
 
 # Internal queue configuration for buffering events to be published.
