@@ -48,6 +48,7 @@ https://github.com/elastic/apm-server/compare/6.1...6.2[View commits]
 - Increase default 'ConcurrentRequests' from 20 to 40 {pull}492[492]
 - Change config option `frontend.sourcemapping.index` to `frontend.source_mapping.index_pattern` and remove adding a '*' by default.{pull}492[492].
 - Add Config option for excluding stack trace frames from `grouping_key` calculation {pull}482[482]
+- Expose expvar {pull}509[509]
 
 ==== Deprecated
 
